# CStusy

./: 5.字符串作业.docx  Cstudy03.rar  README.md  未全部完成.txt
CStudy04/: CMakeLists.txt  homework.c  main.c  main.ncb  main.opt  main.plg
CStudy10/: CLogin.c  CLogin.h  CRegWin.c  CRegWin.h  CStaff.h  CStuaff.c  CStudy09.dsp  CStudy09.ncb  CStudy09.opt  CStudy09.plg  CTools.c  CTools.h  Main.c  Screen.c  Screen.h
CStudy11/: CRole.c  CRole.h  CStudy09.dsp  CStudy09.dsw  CStudy09.ncb  CStudy09.opt  CStudy09.plg  Main.c
CStudy13/: CMakeLists.txt  main.c  main.ncb  main.opt  main.plg
CStudy14/: CMakeLists.txt  main.c  main.ncb  main.opt  main.plg
CStudy15/: CMakeLists.txt  CStudy15.dsp  CStudy15.dsw  CStudy15.ncb  CStudy15.opt  CStudy15.plg  Link.c  Link.h  main.c  main.ncb  main.opt  main.plg
CStudy16/: CMakeLists.txt  Link.c  Link.h  Menu.h  main.c
CStudy17/: CMakeLists.txt  File.c  File.h  Link.c  Link.h  Menu.c  Menu.h  abc.txt  main.c  main.dsp  main.ncb  main.opt  main.plg
Cstudy03/: main.c  main.dsp  main.ncb  main.opt  main.plg  main01.c  main01.dsp  main01.dsw  (+4 more)
DishSystem/: CMakeLists.txt  library.c  library.dsp  library.h  library.ncb  library.opt  library.plg
DishSystem/Debug/: library.ilk  library.pch  vc60.idb
DishSystem/Screen/: LoginScreen.c  RegisterScreen.c  SelectScreen.c  UpdateScreen.c
DishSystem/Screen/h/: LoginScreen.h  RegisterScreen.h  SelectScreen.h  UpdateScreen.h
DishSystem/commmon/: CRole.c  CTools.c  Screen.c
DishSystem/commmon/h/: CRole.h  CTools.h  Screen.h
DishSystem/controller/: CLogin.c
DishSystem/controller/h/: CLogin.h
(+291 files in other folders)
